syntax = "proto3";

option go_package = "pkg/grpc";

package auto.trading.user.v1;

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUsers(Empty) returns (UsersResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message Empty {}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string image= 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    optional google.protobuf.Timestamp deleted_at = 7;
}

message UserResponse {
  User user = 1;
}

message UsersResponse {
  repeated User users = 1;
}
